<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:elevation="0dp"
    tools:context=".OfferActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolBarStyle"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/backgroundColor"
            android:theme="@style/ToolBarStyle"
            app:elevation="0dp"
            app:popupTheme="@style/Theme.PodzielSięKsiążką.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offerPhotoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/offerPhotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/offerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/offerImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerPhotoText"
            app:srcCompat="@drawable/default_book" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offerTitleCategoryISBN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerPhotoLayout">

        <TextView
            android:id="@+id/authorCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="TextView"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerAuthorEditLayout" />

        <TextView
            android:id="@+id/offerTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/offerTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offerTitleEditLayout"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/smallborder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerTitleText">

            <EditText
                android:id="@+id/offerTitleEdit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:maxLength="40"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/offerTitleHint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />





        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/offerAuthorText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/offerAuthor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerTitleEditLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offerAuthorEditLayout"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/smallborder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerAuthorText">

            <EditText
                android:id="@+id/offerAuthorEdit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:maxLength="40"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/offerAuthorHint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/offerCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/offerCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerAuthorEditLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offerCategoryLayout"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/smallborder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerCategoryText">


            <Spinner
                android:id="@+id/offerSpinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/offerISBNText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/offerISBN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerCategoryLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offerISBNEditLayout"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/smallborder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerISBNText">

            <EditText
                android:id="@+id/offerISBNEdit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:maxLength="13"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/offerISBNHint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="TextView"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerTitleEditLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offerDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerTitleCategoryISBN">

        <TextView
            android:id="@+id/offerDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:text="@string/offerDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offerDescriptionLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bigborder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offerDescriptionText">

            <EditText
                android:id="@+id/offerDescriptionEdit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="#00000000"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/offerDescriptionHint"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/descriptionCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/offerDescriptionLayout"
            app:layout_constraintEnd_toEndOf="@+id/offerDescriptionLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSendOffer"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/offercreatebutton"
        android:onClick="sendOffer"
        android:text="@string/offerSend"
        app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isbnCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/offerTitleCategoryISBN"
        app:layout_constraintTop_toBottomOf="@+id/offerTitleCategoryISBN" />

</androidx.constraintlayout.widget.ConstraintLayout>